# cedar-valuerecommender-server-application/src/main/resources/assets/swagger-api/swagger.json
@@ -1,120 +1,265 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "title": "CEDAR Value Recommender Server API",
-    "description": "CEDAR Value Recommender Server API",
-    "version": "2.6.25-SNAPSHOT"
+  "swagger" : "2.0",
+  "info" : {
+    "description" : "CEDAR Value Recommender Server API",
+    "version" : "2.8.3-SNAPSHOT",
+    "title" : "CEDAR Value Recommender Server API"
   },
-  "basePath": "/command",
-  "schemes": [
-    "https"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
-  "securityDefinitions": {
-    "api_key": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "description": "Your CEDAR API key, using the format 'apiKey &lt;yourApiKey&gt;'",
-      "in": "header"
-    }
-  },
-  "responses": {
-    "ok": {
-      "description": "Successful operation"
-    },
-    "bad_request": {
-      "description": "Bad request"
-    },
-    "unauthorized": {
-      "description": "Unauthorized"
-    },
-    "internal_error": {
-      "description": "Internal server error"
-    }
-  },
-  "paths": {
-    "/recommend": {
-      "post": {
-        "summary": "Get recommendation",
-        "description": "Get metadata recommendations for a target field.",
-        "parameters": [
-          {
-            "name": "Input",
-            "in": "body",
-            "description": "user to add to the system",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "templateId": {
-                  "type": "string",
-                  "description": "Example&#58; https://repo.metadatacenter.org/templates/8bc64av5-df6b-48c8-8c61-6c016245918e",
-                  "required": false
-                },
-                "populatedFields": {
-                  "type": "array",
-                  "items": {
-                    "type": "object",
-                    "properties": {
-                      "fieldPath": {
-                        "type": "string",
-                        "description": "Example&#58; disease",
-                        "required": true
-                      },
-                      "fieldValueLabel": {
-                        "type": "string",
-                        "description": "Example&#58; atopic dermatitis",
-                        "required": true
-                      },
-                      "fieldValueType": {
-                        "type": "string",
-                        "description": "Example&#58; atopic dermatitis",
-                        "required": false
-                      }
-                    }
-                  }
-                },
-                "targetField": {
-                  "type": "object",
-                  "properties": {
-                    "fieldPath": {
-                      "type": "string",
-                      "description": "Example&#58; tissue"
-                    }
-                  }
-                },
-                "strictMatch": {
-                  "type": "boolean",
-                  "required": false
-                },
-                "includeDetails": {
-                  "type": "boolean",
-                  "description": "If set to true, it returns details about how the recommendations were generated",
-                  "required": false
-                }
-              }
-            }
+  "tags" : [ {
+    "name" : "Command"
+  } ],
+  "schemes" : [ "https" ],
+  "paths" : {
+    "/command/can-generate-recommendations" : {
+      "post" : {
+        "tags" : [ "Command" ],
+        "summary" : "Check whether recommendations can be generated",
+        "description" : "Check whether the value recommender can generate recommendations for a template (or for any template if none is provided).",
+        "operationId" : "areRecommendationsEnabled",
+        "produces" : [ "application/json" ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation"
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "404" : {
+            "description" : "Not found"
+          },
+          "500" : {
+            "description" : "Internal server error"
           }
-        ],
-        "responses": {
-          "200": {
-            "$ref": "#/responses/ok"
-          },
-          "400": {
-            "$ref": "#/responses/bad_request"
-          },
-          "401": {
-            "$ref": "#/responses/unauthorized"
-          },
-          "500": {
-            "$ref": "#/responses/internal_error"
-          }
-        }
+        },
+        "security" : [ {
+          "api_key" : [ ]
+        } ]
       }
+    },
+    "/command/generate-rules/status" : {
+      "get" : {
+        "tags" : [ "Command" ],
+        "summary" : "Get rule-generation status for all templates",
+        "description" : "Get status information about the rule-generation process for all templates.",
+        "operationId" : "getRulesGenerationStatusAll",
+        "produces" : [ "application/json" ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation"
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "404" : {
+            "description" : "Not found"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        },
+        "security" : [ {
+          "api_key" : [ ]
+        } ]
+      }
+    },
+    "/command/generate-rules/status/{template_id}" : {
+      "get" : {
+        "tags" : [ "Command" ],
+        "summary" : "Get rule-generation status for a template",
+        "description" : "Get status information about the rule-generation process for a template.",
+        "operationId" : "getRulesGenerationStatus",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "template_id",
+          "in" : "path",
+          "description" : "Template identifier.",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation"
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "404" : {
+            "description" : "Not found"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        },
+        "security" : [ {
+          "api_key" : [ ]
+        } ]
+      }
+    },
+    "/command/generate-rules/{template_id}" : {
+      "post" : {
+        "tags" : [ "Command" ],
+        "summary" : "Generate rules for a template",
+        "description" : "Generate the mining rules that the value recommender uses to produce recommendations for a template.",
+        "operationId" : "generateRules",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "name" : "template_id",
+          "in" : "path",
+          "description" : "Template identifier.",
+          "required" : true,
+          "type" : "string"
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation"
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "404" : {
+            "description" : "Not found"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        },
+        "security" : [ {
+          "api_key" : [ ]
+        } ]
+      }
+    },
+    "/command/recommend" : {
+      "post" : {
+        "tags" : [ "Command" ],
+        "summary" : "Get recommendation",
+        "description" : "Get metadata recommendations for a target field.",
+        "operationId" : "recommendValues",
+        "produces" : [ "application/json" ],
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "Input",
+          "description" : "The recommendation input",
+          "required" : true,
+          "schema" : {
+            "$ref" : "#/definitions/RecommendationInput"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Successful operation"
+          },
+          "400" : {
+            "description" : "Bad request"
+          },
+          "401" : {
+            "description" : "Unauthorized"
+          },
+          "403" : {
+            "description" : "Forbidden"
+          },
+          "404" : {
+            "description" : "Not found"
+          },
+          "500" : {
+            "description" : "Internal server error"
+          }
+        },
+        "security" : [ {
+          "api_key" : [ ]
+        } ]
+      }
+    }
+  },
+  "securityDefinitions" : {
+    "api_key" : {
+      "description" : "Your CEDAR API key, using the format 'apiKey <yourApiKey>'",
+      "type" : "apiKey",
+      "name" : "Authorization",
+      "in" : "header"
+    }
+  },
+  "definitions" : {
+    "PopulatedField" : {
+      "type" : "object",
+      "required" : [ "fieldPath", "fieldValueLabel" ],
+      "properties" : {
+        "fieldPath" : {
+          "type" : "string",
+          "description" : "Example: disease"
+        },
+        "fieldValueLabel" : {
+          "type" : "string",
+          "description" : "Example: atopic dermatitis"
+        },
+        "fieldValueType" : {
+          "type" : "string",
+          "description" : "Example: atopic dermatitis"
+        }
+      },
+      "description" : "A field that has already been populated in the metadata."
+    },
+    "RecommendationInput" : {
+      "type" : "object",
+      "properties" : {
+        "includeDetails" : {
+          "type" : "boolean",
+          "description" : "If set to true, it returns details about how the recommendations were generated."
+        },
+        "populatedFields" : {
+          "type" : "array",
+          "description" : "The fields that have already been populated in the metadata.",
+          "items" : {
+            "$ref" : "#/definitions/PopulatedField"
+          }
+        },
+        "strictMatch" : {
+          "type" : "boolean",
+          "description" : "If set to true, only exact matches are considered."
+        },
+        "targetField" : {
+          "description" : "The field for which recommendations are requested.",
+          "$ref" : "#/definitions/TargetField"
+        },
+        "templateId" : {
+          "type" : "string",
+          "description" : "Example: https://repo.metadatacenter.org/templates/8bc64av5-df6b-48c8-8c61-6c016245918e"
+        }
+      },
+      "description" : "The input used to request metadata recommendations for a target field."
+    },
+    "TargetField" : {
+      "type" : "object",
+      "properties" : {
+        "fieldPath" : {
+          "type" : "string",
+          "description" : "Example: tissue"
+        }
+      },
+      "description" : "The field for which recommendations are requested."
     }
   }
 }
